WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195625
Device Orientation access permission should be denied unless explicitly granted by the client
https://bugs.webkit.org/show_bug.cgi?id=195625
Summary
Device Orientation access permission should be denied unless explicitly grant...
Chris Dumez
Reported
2019-03-12 09:41:07 PDT
Device Orientation access permission should be denied unless explicitly granted by the client. Currently, it is granted by default.
Attachments
Patch
(17.72 KB, patch)
2019-03-12 09:42 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-03-12 09:42:58 PDT
Created
attachment 364394
[details]
Patch
EWS Watchlist
Comment 2
2019-03-12 09:45:56 PDT
Attachment 364394
[details]
did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/DeviceOrientation.mm:94: More than one command on the same line [whitespace/newline] [4] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/DeviceOrientation.mm:97: More than one command on the same line [whitespace/newline] [4] Total errors found: 2 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 3
2019-03-12 13:32:44 PDT
Comment on
attachment 364394
[details]
Patch Clearing flags on attachment: 364394 Committed
r242823
: <
https://trac.webkit.org/changeset/242823
>
Chris Dumez
Comment 4
2019-03-12 13:32:46 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-03-12 13:33:25 PDT
<
rdar://problem/48820909
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug